# Project

./: .gitignore  README.md  galaxy-initialization.txt
Rusteroids/: Cargo.toml  galaxy-initialization.txt
Rusteroids/src/: main.rs
Rusteroids/src/modules/: mod.rs
Rusteroids/src/modules/arcade_explorer/: Explorer_arcade.rs  Explorer_arcade_test.rs  mod.rs
Rusteroids/src/modules/automatic_explorer/: Explorer.rs  Explorer_test.rs  mod.rs
Rusteroids/src/modules/explorer_utils/: bag_type.rs  explorer.rs  explorer_ai.rs  explorer_base.rs  explorer_map.rs  handlers.rs  mod.rs  planet_infos.rs  recipes.rs  resource_types.rs  tasks.rs
Rusteroids/src/modules/explorers/: mod.rs
Rusteroids/src/modules/explorers/common_tasks/: craft_all.rs  mod.rs  utils.rs
Rusteroids/src/modules/explorers/explorer_1/: explorer_1.rs  mod.rs  test_missing_resources.rs
Rusteroids/src/modules/helper/: fill_unbounded_resource.rs  mod.rs  printable.rs  resources_helper.rs  storia.rs
Rusteroids/src/modules/manual_explorer/: bag_type.rs  complex_type_to_request.rs  explorer_ai.rs  manual_explorer.rs  mod.rs
Rusteroids/src/modules/orchestrator/: event_manager.rs  explorer_initializer.rs  initializer.rs  mod.rs  orchestator.rs  orchestrator.rs
Rusteroids/src/modules/read_galaxy/: build_data_structs.rs  galaxy_generator.rs  graph.rs  mod.rs  planet_map.rs  read_galaxy_file.rs  stats.rs
Rusteroids/src/modules/visualizer/: dto.rs  mod.rs  routes.rs  server.rs
Rusteroids/visualizer/: index.html  index.ts  logs.html  style.css  tsconfig.json
(+29 files in other folders)
